# ollama-proxy

./: .gitignore  README.md  keys.toml  pyproject.toml  run.sh  setup.py
doc/: dev.md
src/ollama-proxy/: main.py
src/ollama_proxy/: app.py  config.py  define.py  depends.py  main.py  models.py  router.py  server.py
src/ollama_proxy/services/: __init__.py  base.py  deepseek.py  glm.py  qwen.py
tests/: test_chat.py  test_model.py
